SmartCompiler/.metadata/.plugins/org.eclipse.cdt.ui/Util.build.log

**** Build of configuration Debug for project Util ****

make all 
Building file: ../Logger.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -fPIC -MMD -MP -MF"Logger.d" -MT"Logger.d" -o "Logger.o" "../Logger.cpp"
../Logger.cpp: In member function ‘void Util::Logger::Log(const char*, ...)’:
../Logger.cpp:45:5: error: ‘unique_ptr’ is not a member of ‘std’
     std::unique_ptr<char[]> buf( new char[ size ] );
     ^
../Logger.cpp:45:21: error: expected primary-expression before ‘char’
     std::unique_ptr<char[]> buf( new char[ size ] );
                     ^
../Logger.cpp:45:21: error: expected ‘;’ before ‘char’
../Logger.cpp:46:21: error: ‘buf’ was not declared in this scope
     std::vsnprintf( buf.get(), size, format, args);
                     ^
../Logger.cpp:52:18: error: ‘CurrentDateTime’ is not a member of ‘Util’
     m_Logfile << Util::CurrentDateTime() << ":\t";
                  ^
../Logger.cpp:19:9: warning: unused variable ‘nLength’ [-Wunused-variable]
     int nLength = 0;
         ^
../Logger.cpp: In member function ‘void Util::Logger::Log(const string&)’:
../Logger.cpp:61:19: error: ‘CurrentDateTime’ is not a member of ‘Util’
     m_Logfile <<  Util::CurrentDateTime() << ":\t";
                   ^
../Logger.cpp: In member function ‘Util::Logger& Util::Logger::operator<<(const string&)’:
../Logger.cpp:67:26: error: ‘CurrentDateTime’ is not a member of ‘Util’
     m_Logfile << "\n" << Util::CurrentDateTime() << ":\t";
                          ^
make: *** [Logger.o] Error 1

**** Build Finished ****
